--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="theme-color" content="#317EFB">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Mr.Notes is an easy to use app. Mr.Notes will simply store your notes in the browser's storage. Your Notes are Private in your brower's Local Storage No one else can see your notes. Use it as a Notes app or a To-DO app. Based on Vanilla Js, Simple HTML, CSS, BOOTSTRAP. ">
-    <title>Mr.Notes - Write your notes simply in your browser | Use It as a To-do App.</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        content="Hello.Notes is an easy to use app. Hello.Notes will simply store your notes in your browser's storage. Your Notes are Private in your brower's storage No one else can see your notes. Use it as a Notes app or a To-DO app. Based on Vanilla Js, Simple HTML, CSS, BOOTSTRAP. ">
+    <title>Hello.Notes - Write your notes simply from your browser | Use It as a To-do App. | Simple to use no need to
+        download | Lighter than feather.</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/jpg" href="noteslogo.png" />
     <style>
         footer {
@@ -24,7 +25,6 @@
         }
 
         .card {
-            background: rgba(86, 215, 255, 0.377);
             backdrop-filter: blur(4px);
             -webkit-backdrop-filter: blur(4px);
             border-radius: 5px;
@@ -37,39 +37,65 @@
         }
 
         .A {
-            background: rgba(86, 215, 255, 0.377);
             backdrop-filter: blur(4px);
             -webkit-backdrop-filter: blur(4px);
             border-radius: 5px;
-            border: 1px solid rgba(255, 255, 255, 0.18);
+            padding: 20px;
+            border: 1px solid #0d6efd;
         }
     </style>
 
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-info">
+
+    <!-- NAVBAR FOR FEATURES -->
+    <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Mr.Notes</a>
-            <form class="d-flex">
-                <input id="searchTxt" class="form-control me-2" type="search" placeholder="Search your notes"
-                    aria-label="Search">
-                <button type="button" class="btn btn-outline-light">Search</button>
-            </form>
+            <a class="navbar-brand" href="/" style="color: white;">Hello.Notes</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom"
+                            aria-controls="offcanvasBottom" style="color: white;">Privacy policy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
+                            aria-controls="offcanvasTop" style="color: white;">About app</a>
+                    </li>
+                </ul>
+
+                <form class="d-flex">
+                    <input id="searchTxt" class="form-control me-2" type="search" placeholder="Search your notes"
+                        aria-label="Search">
+                    <button type="button" class="btn btn-outline-light">Search</button>
+                </form>
+            </div>
         </div>
     </nav>
 
+    <!-- NAVBAR FOR FEATURES -->
 
+
+
+
+    <!-- MAIN ELEMENTS -->
     <main>
         <div class="container my-3">
-            <h2>WELCOME TO Mr.Notes</h2>
+            <h2>WELCOME TO Hello.Notes</h2>
             <div class="container-fluid A">
                 <div class="card-body">
 
                     <div class="mb-3">
                         <h5 id="addt">ADD A TITLE FOR NOTE</h5>
                         <input id="addTitle" type="text" class="form-control" name="title" id="exampleFormControlInput1"
-                            placeholder="Mr.notes">
+                            placeholder="Hello.notes">
                     </div>
 
                     <h5 class="card-title">ADD A NOTE</h5>
@@ -77,7 +103,7 @@
                         <textarea id="addTxt" class="form-control" aria-label="With textarea"
                             name="textarea"></textarea>
                     </div>
-                    <button style="margin: 10px;" id="addBtn" class="btn btn-outline-dark">Add note</button>
+                    <button style="margin: 10px;" id="addBtn" class="btn btn-outline-primary">Add note</button>
                 </div>
             </div>
             <hr>
@@ -90,13 +116,80 @@
     </main>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+
+
+
+
+    <!-- ABOUT -->
+    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasTopLabel">About Hello Notes</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="card-body">
+                <p class="card-text">If you are using hello notes for taking notes, you are saving million of trees and
+                    money. Hello Notes provides you a note taking facility for absolutely free of cost, you can store
+                    5000+ number of notes using this web app, It is very simple to use app, Add a title add a
+                    description and just click the add note button. </p>
+                <h6>USAGE:</h6>
+
+                <p><strong>1. </strong>Add a title for your note, title looks great.</p>
+                <p><strong>2. </strong>Add a Description for your note, so note would be expressive. </p>
+                <p><strong>3. </strong>Click on the "Add note" button done</p>
+                <p><strong>4. </strong>You can search your notes with the given search box just type in your note's
+                    letter</p>
+                <p><strong>5. </strong>You can also use <button disabled>CTRL</button>+<button disabled>F</button> to
+                    search your notes</p>
+                <p><strong>6. </strong>You can use styling for your notes,
+                    <code>&lt;strong&gt; <strong>Bold text</strong> &lt;/strong&gt;</code> for bold.</p>
+                <p><strong>7. </strong> <code>&lt;em&gt; <em>Italic text</em> &lt;/em&gt;</code> for italic.</p>
+                <p><strong>8. </strong> <code>&lt;u&gt; <u>Underline text</u> &lt;/u&gt;</code> for underline.</p>
+
+
+
+
+
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <!-- PRIVACY POLICY -->
+    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasBottomLabel">Privacy Policy</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body large">
+            <div class="card-body">
+                <p class="card-text">We don't store any kind of data, if you are using our web application which is free
+                    to use, when you add a note, it is only visible to you because it is stored in your web browser,
+                    which means no one else can read and view your notes, you can store any number of notes using Hello
+                    Notes, Once again: We don't store any kind of data, we only use 2 cookies which is browser's local
+                    storage and session storage for storing notes and for search engine optimization, </p>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+    <!-- -------------------------------------BOOTSTRAP SCRIPTS---------------------------------------------------- -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
     <script src="script.js"></script>
 
+    <footer class="bg-primary">Copyright © 2022-2023 - HelloNotes </footer>
 </body>
 
-<footer class="bg-info">Copyright © 2021-2022 - MrNotes </footer>
 
 </html>
