--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#317EFB">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="V0uGtjE5vRu86tCwrlQSJzn4EjIaXZEhhKEmMEvvOMs" />
     <meta name="description"
         content="Hello.Notes is an easy to use app. Hello.Notes will simply store your notes in your browser's storage. Your Notes are Private in your brower's storage No one else can see your notes. Use it as a Notes app or a To-DO app. Based on Vanilla Js, Simple HTML, CSS, BOOTSTRAP. ">
     <title>Hello.Notes - Write your notes simply from your browser | Use It as a To-do App. | Simple to use no need to
